corrected overflow and pumplick ortograph mistakes you know

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html, body, :root {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 :root {
     --primary-color: #f28705;
     --light-orange: #f29f05;
